# EBA

./: .gitignore  EBA_example.py  LICENSE  NOTICE  README.md  eba_example.py  pyproject.toml
analysis/cath/: CATH_annotation_transferring_test219.ipynb  README.md
analysis/cath/data/: test219.fasta  test219_truth.pickle
analysis/cath/scripts/: query_against_lookupset.py  save_embeddings.py
analysis/local_alignment_example/: domain_permutation.py
analysis/pisces/: EBA_pisces.ipynb  README.md
analysis/pisces/data/: pairs.pc  sequences.fasta
analysis/pisces/results/: TM_scores.pickle
analysis/pisces/scripts/: compute_AD_pisces_pairs.py  compute_EBA_pisces_pairs.py  compute_TMvec_pisces_pairs.py  compute_a3m_profiles.py  compute_pLMBLAST_pisces_pairs.py  save_embeddings.py
eba/: alignments.py  methods.py  plm_extractor.py  score_matrices.py
modules/: EBA.py  alignment.py  embedding.py  similarity_matrix.py
