[project]
name = "eba"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = ["numba==0.56.4",
                "sentencepiece==0.1.97",
                "fair-esm==2.0.0",
                "transformers==4.25.1",
                "torch==2.1.0",
                "scipy==1.11.3"
                ]

[tool.setuptools.packages.find]
include = ["eba"]
namespaces = false

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
